src/css/style.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

header, footer {
  height: 5vh;
  display: flex;
  justify-content: space-between;
}
header .container, footer .container {
  display: flex;
  gap: 1rem;
}

main {
  height: 90vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.clock {
  margin-top: 1.5rem;
  font-family: "Poppins";
  font-style: normal;
  font-weight: 600;
  font-size: 14rem;
  line-height: 1;
}

.calendar {
  font-family: "Poppins";
  font-style: normal;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 1;
}

.greeting,
.name {
  font-family: "Poppins";
  font-style: normal;
  font-weight: 600;
  font-size: 4rem;
  line-height: 0.8;
  letter-spacing: 0em;
}

/*# sourceMappingURL=style.css.map */

